--- a/outlet.css
+++ b/outlet.css
@@ -17,7 +17,7 @@ body {
     position: relative;
     color: white;
     margin: 0px;
-    cursor: move;
+    cursor: default;
 }
 
 .logo-hd::after {
